# Balatro-ML

./: .gitignore  .mise.toml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PROJECT.md  README.md  justfile  pyproject.toml  requirements.txt
.game/: 02-scoring-system.md  03-poker-hands.md  05-jokers.md  07-planet-cards.md  08-spectral-cards.md  09-vouchers.md  10-booster-packs.md  11-blinds-and-antes.md  12-decks.md  13-stakes.md  14-strategy-and-synergies.md  CLAUDE.md
.streamlit/: config.toml
docs/game/: 00-overview.md  01-game-loop-and-economy.md  04-playing-cards.md  06-tarot-cards.md
mod/: bridge.lua  logic.lua  manifest.json  state.lua
scripts/: dashboard.py  launch_balatro.sh  probe_lua_funcs.py  record_human.py  reload_mod.py  restart_balatro.sh  seed_dashboard.py  train.py  verify_bridge.py
src/agent/: __init__.py  policy.py  pyproject.toml  trainer.py
src/agent/eval/: __init__.py
src/agent/policy/: __init__.py
src/agent/store/: __init__.py
src/agent/train/: __init__.py
src/dashboard/: app.py  db.py  format.py  recorder.py
src/data/: database.py  normalise.py
src/env/: action_space.py  gymnasium_env.py  observation.py  reward.py  socket_bridge.py
src/game/: Cargo.toml  lib.rs
src/game/env/: mod.rs
src/game/rules/: bosses.rs  calc.rs  card.rs  consumables.rs  jokers.rs  mod.rs  state.rs
src/game/sim/: mod.rs
src/game/solver/: mod.rs
src/game/tests/: integration.rs
tests/: conftest.py  test_app_smoke.py  test_db.py  test_env.py  test_normalise.py  test_observation.py  test_recorder.py  test_reward.py  test_socket.py
tests/fixtures/: booster_pack_mega.json  booster_pack_standard.json  booster_pack_state.json  sample_state.json
