[project]
name = "agent"
version = "0.1.0"
description = "Balatro RL learner — policy/value nets, training, eval, run store (ARCHITECTURE.md §3.2)."
requires-python = ">=3.10"
dependencies = [
    # Filled in as the learner is built. Target stack per ARCHITECTURE.md §3.2:
    # "torch",
    # "sb3-contrib",        # MaskablePPO (or a CleanRL masked-PPO variant)
    # "gymnasium",
    # "numpy",
]

[tool.ruff]
# Code quality per ARCHITECTURE.md §8 (ruff / black).

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
